# native-ai-task-manager

./: .gitignore  AGENTS.md  GEMINI.md  README.md  session_summary.md
.github/workflows/: tasks-agent.yml  tasks-mcp.yml
docs/: mcp-server-exploration.md  mcp-server-plan.md  mcp-server-spec.md  tasks-agent-plan.md  tasks-agent-spec.md
services/tasks-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/tasks-agent/src/tasks_agent/: __init__.py  agent.py  config.py  final_test.py  hello.py  mcp.py  test_gemini.py  test_integration.py  test_mcp.py  test_streaming.py
services/tasks-agent/tests/: __init__.py
services/tasks-mcp/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/tasks-mcp/src/tasks_mcp/: __init__.py  formatters.py  models.py  server.py  store.py
services/tasks-mcp/tests/: __init__.py  conftest.py  test_models.py  test_store.py
