[project]
name = "tasks-agent"
version = "1.0.0"
description = "Tasks Manager Agent using OpenAI Agents SDK with Gemini LLM"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "openai-agents[docker]>=0.14.0",   # SandboxAgent with Docker support
    "litellm>=1.40.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
tasks-agent = "tasks_agent.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tasks_agent"]
